--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,12 @@ version = '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
-
+"jdbc:postgresql://localhost:5432/postgres"
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.postgresql:postgresql:42.7.1'
+
 }
 
 test {
