--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,25 @@ plugins {
 }
 
 group = 'by.ivuts'
-version = '1.0-SNAPSHOT'
+version = '1.0.0'
 
 repositories {
     mavenCentral()
 }
-"jdbc:postgresql://localhost:5432/postgres"
-dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation 'org.postgresql:postgresql:42.7.1'
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
+dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    implementation 'org.postgresql:postgresql:42.7.1'
+    implementation 'org.hibernate:hibernate-core:6.4.3.Final'
 }
 
 test {
