--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,15 @@ configurations {
 }
 
 dependencies {
+    implementation 'org.springframework:spring-context:6.1.4'
+    implementation 'org.springframework:spring-core:6.1.4'
+    implementation 'org.springframework:spring-beans:6.1.4'
+
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
-    implementation 'org.postgresql:postgresql:42.7.1'
+    implementation 'org.postgresql:postgresql:42.7.2'
     implementation 'org.hibernate:hibernate-core:6.4.3.Final'
 }
 
