--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.2.3'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'by.ivuts'
@@ -16,12 +18,10 @@ configurations {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-context:6.1.4'
-    implementation 'org.springframework:spring-core:6.1.4'
-    implementation 'org.springframework:spring-beans:6.1.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    compileOnly 'org.projectlombok:lombok:1.18.30'
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     implementation 'org.postgresql:postgresql:42.7.2'
